@@ -759,7 +759,6 @@ $NEWPAGE
 'linklistsub' => '(списак веза)',
 'linkshere' => 'Следеће странице су повезане овде:',
 'linkstoimage' => 'Следеће странице користе ову слику:',
-'linktrail' => "/^([абвгдђежзијклљмнњопрстћуфхцчџш]+)(.*)$/usD",
 'listform' => 'списак',
 'listingcontinuesabbrev' => ' наст.',
 'listusers' => 'Списак корисника',
